--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -16,3 +16,4 @@ include heat_jeos/cfntools/cfn-hup
 include heat_jeos/cfntools/cfn-signal
 include heat_jeos/cfntools/cfn-get-metadata
 include heat_jeos/cfntools/cfn-push-stats
+graft docs
