Inject template boto.cfg for cfntools
new cfn-push-stats uses boto to connect to the heat
CloudWatch server, so we create a template boto.cfg
which then needs to be sedded in the instance template
so that the gateway IP/hostname is specified

Ref #21

Signed-off-by: Steven Hardy <shardy@redhat.com>

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -17,4 +17,5 @@ include heat_jeos/cfntools/cfn-hup
 include heat_jeos/cfntools/cfn-signal
 include heat_jeos/cfntools/cfn-get-metadata
 include heat_jeos/cfntools/cfn-push-stats
+include heat_jeos/cfntools/boto.cfg
 graft docs
