Migrate to flake8.
Fixes bug 1172444

Change-Id: I68d5e58f6992f7357e3bb4f72ae40d0ebe076d4b

--- a/tox.ini
+++ b/tox.ini
@@ -15,20 +15,13 @@ sitepackages = True
 downloadcache = ~/cache/pip
 
 [testenv:pep8]
-deps=
-  pep8==1.3.3
-  pyflakes
-commands = bash tools/run_pep8.sh
+commands = flake8
 
 [testenv:pylint]
 setenv = VIRTUAL_ENV={envdir}
 deps = -r{toxinidir}/tools/pip-requires
        pylint==0.26.0
 commands = bash tools/lintstack.sh
-
-[testenv:pyflakes]
-deps = pyflakes
-commands = python tools/flakes.py heat_cfntools
 
 [testenv:cover]
 # Also do not run test_coverage_ext tests while gathering coverage as those
@@ -39,3 +32,8 @@ commands =
 
 [testenv:venv]
 commands = {posargs}
+
+[flake8]
+show-source = true
+builtins = _
+exclude=.venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,tools
