Migrate to pbr.
Fixes bug 1179007

Change-Id: Iaa8a2722938d0b25df1041695f3c1c8dbf563b47

--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,6 @@ deps = -r{toxinidir}/requirements.txt
 commands = python setup.py testr --slowest --testr-args='{posargs}'
 
 [tox:jenkins]
-sitepackages = True
 downloadcache = ~/cache/pip
 
 [testenv:pep8]
@@ -24,11 +23,8 @@ deps = -r{toxinidir}/requirements.txt
 commands = bash tools/lintstack.sh
 
 [testenv:cover]
-# Also do not run test_coverage_ext tests while gathering coverage as those
-# tests conflict with coverage.
 commands =
-  python setup.py testr --coverage \
-    --testr-args='^(?!.*test.*coverage).*$'
+  python setup.py testr --coverage --testr-args='{posargs}'
 
 [testenv:venv]
 commands = {posargs}
