--- a/tox.ini
+++ b/tox.ini
@@ -6,8 +6,8 @@ setenv = VIRTUAL_ENV={envdir}
          LANG=en_US.UTF-8
          LANGUAGE=en_US:en
          LC_ALL=C
-deps = -r{toxinidir}/tools/pip-requires
-       -r{toxinidir}/tools/test-requires
+deps = -r{toxinidir}/requirements.txt
+       -r{toxinidir}/test-requirements.txt
 commands = python setup.py testr --slowest --testr-args='{posargs}'
 
 [tox:jenkins]
@@ -19,7 +19,7 @@ commands = flake8
 
 [testenv:pylint]
 setenv = VIRTUAL_ENV={envdir}
-deps = -r{toxinidir}/tools/pip-requires
+deps = -r{toxinidir}/requirements.txt
        pylint==0.26.0
 commands = bash tools/lintstack.sh
 
