Include ChangeLog and AUTHORS
Similar to how other OpenStack components are built,
include a ChangeLog and AUTHORS file.

Change-Id: I28037aa3daf32e7e02dc2545ed3adf4227860d96

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,7 @@
 include CONTRIBUTING.rst
-include LICENSE
-include README.rst
 include MANIFEST.in
+include README.rst
+include AUTHORS LICENSE
+include ChangeLog
 graft doc
 graft tools
