Add Flake8 checks for bin/cfn-* to Gating
Fix the Pep8/hacking/pyflakes warnings in bin/cfn-*.

Change-Id: Ie21b3909c80d33adc712c2f3c9494d0fdbd90608

--- a/tox.ini
+++ b/tox.ini
@@ -15,6 +15,7 @@ downloadcache = ~/cache/pip
 
 [testenv:pep8]
 commands = flake8
+           flake8 --filename=cfn-* bin
 
 [testenv:pylint]
 setenv = VIRTUAL_ENV={envdir}
