--- a/tox.ini
+++ b/tox.ini
@@ -26,4 +26,4 @@ commands = {posargs}
 
 [flake8]
 show-source = true
-exclude=.venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,tools
+exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,tools
