Add OpenStack doc support for heat cfntools
This allow build docs with new OpenStack doc format.

Change-Id: I4ed880ee5c03de40793ebdb4662cbaf3eeca12fa

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,3 +33,11 @@ setup-hooks =
 
 [wheel]
 universal = 1
+
+[build_sphinx]
+source-dir = doc/source
+build-dir = doc/build
+all_files = 1
+
+[upload_sphinx]
+upload-dir = doc/build/html
