--- a/tox.ini
+++ b/tox.ini
@@ -27,3 +27,9 @@ commands = {posargs}
 [flake8]
 show-source = true
 exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,tools
+
+[testenv:docs]
+deps = -r{toxinidir}/requirements.txt
+       -r{toxinidir}/test-requirements.txt
+       sphinxcontrib-httpdomain
+commands = python setup.py build_sphinx
