--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,7 @@ envlist = py34,py27,pep8
 
 [testenv]
 setenv = VIRTUAL_ENV={envdir}
+install_command = pip install -c{env:UPPER_CONSTRAINTS_FILE:https://git.openstack.org/cgit/openstack/requirements/plain/upper-constraints.txt} {opts} {packages}
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 commands = python setup.py testr --slowest --testr-args='{posargs}'
@@ -29,7 +30,12 @@ show-source = true
 exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,tools
 
 [testenv:docs]
-deps = -r{toxinidir}/requirements.txt
-       -r{toxinidir}/test-requirements.txt
-       sphinxcontrib-httpdomain
-commands = python setup.py build_sphinx
+deps = -r{toxinidir}/doc/requirements.txt
+commands = sphinx-build -W -b html doc/source doc/build/html
+
+[testenv:lower-constraints]
+basepython = python3
+deps =
+  -c{toxinidir}/lower-constraints.txt
+  -r{toxinidir}/requirements.txt
+  -r{toxinidir}/test-requirements.txt
