Switch to use stestr for unit test
According to Openstack summit session [1],
stestr is maintained project to which all Openstack projects should migrate.
So we should switch to stestr.

[1] https://etherpad.openstack.org/p/YVR-python-pti

Change-Id: I14ae3879465e622f36fd7bba3f04cb6e0cb7500e

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ setenv = VIRTUAL_ENV={envdir}
 install_command = pip install -c{env:UPPER_CONSTRAINTS_FILE:https://git.openstack.org/cgit/openstack/requirements/plain/upper-constraints.txt} {opts} {packages}
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
-commands = python setup.py testr --slowest --testr-args='{posargs}'
+commands = stestr run --slowest {posargs}
 
 [testenv:pep8]
 basepython = python3
@@ -21,8 +21,14 @@ commands = bash tools/lintstack.sh
 
 [testenv:cover]
 basepython = python3
+setenv =
+    {[testenv]setenv}
+    PYTHON=coverage run --source heat_cfntools --parallel-mode
 commands =
-  python setup.py testr --coverage --testr-args='{posargs}'
+    stestr run {posargs}
+    coverage combine
+    coverage html -d cover
+    coverage xml -o cover/coverage.xml
 
 [testenv:venv]
 basepython = python3
