add python 3.6 unit test job
This is a mechanically generated patch to add a unit test job running
under Python 3.6 as part of the python3-first goal.

See the python3-first goal document for details:
https://governance.openstack.org/tc/goals/stein/python3-first.html

Change-Id: I438730a4c37639341c0e7294b28a93e8ede845cc
Story: #2002586
Task: #24298

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -3,6 +3,7 @@
       - check-requirements
       - publish-openstack-docs-pti
       - openstack-python35-jobs
+      - openstack-python36-jobs
       - openstack-python-jobs
       - publish-to-pypi
     check:
