--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ description-file =
     README.rst
 author = OpenStack
 author-email = openstack-discuss@lists.openstack.org
-home-page = http://www.openstack.org/
+home-page = https://docs.openstack.org/heat-cfntools/latest/
 python-requires = >=3.6
 classifier =
     Environment :: OpenStack
