--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -5,5 +5,6 @@
       - openstack-python-jobs
       - openstack-python35-jobs
       - openstack-python36-jobs
+      - openstack-python37-jobs
       - publish-openstack-docs-pti
       - publish-to-pypi
