--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -3,8 +3,6 @@
       - check-requirements
       - openstack-lower-constraints-jobs
       - openstack-python-jobs
-      - openstack-python35-jobs
-      - openstack-python36-jobs
-      - openstack-python37-jobs
+      - openstack-python3-train-jobs
       - publish-openstack-docs-pti
       - publish-to-pypi
