--- a/tox.ini
+++ b/tox.ini
@@ -1,20 +1,20 @@
 [tox]
-envlist = py27,py37,pep8
+envlist = py37,pep8
+ignore_basepython_conflict = true
 
 [testenv]
+basepython = python3
 setenv = VIRTUAL_ENV={envdir}
-install_command = pip install -c{env:UPPER_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/master} {opts} {packages}
-deps = -r{toxinidir}/requirements.txt
+deps =-c{env:UPPER_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/master}
+       -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 commands = stestr run --slowest {posargs}
 
 [testenv:pep8]
-basepython = python3
 commands = flake8
            flake8 --filename=cfn-* bin
 
 [testenv:cover]
-basepython = python3
 setenv =
     {[testenv]setenv}
     PYTHON=coverage run --source heat_cfntools --parallel-mode
@@ -25,7 +25,6 @@ commands =
     coverage xml -o cover/coverage.xml
 
 [testenv:venv]
-basepython = python3
 commands = {posargs}
 
 [flake8]
@@ -33,12 +32,10 @@ show-source = true
 exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,tools
 
 [testenv:docs]
-basepython = python3
 deps = -r{toxinidir}/doc/requirements.txt
 commands = sphinx-build -W -b html doc/source doc/build/html
 
 [testenv:lower-constraints]
-basepython = python3
 deps =
   -c{toxinidir}/lower-constraints.txt
   -r{toxinidir}/requirements.txt
