--- a/tox.ini
+++ b/tox.ini
@@ -5,9 +5,10 @@ ignore_basepython_conflict = true
 [testenv]
 basepython = python3
 setenv = VIRTUAL_ENV={envdir}
-deps =-c{env:UPPER_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/master}
-       -r{toxinidir}/requirements.txt
-       -r{toxinidir}/test-requirements.txt
+deps =
+    -c{env:UPPER_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/master}
+    -r{toxinidir}/requirements.txt
+    -r{toxinidir}/test-requirements.txt
 commands = stestr run --slowest {posargs}
 
 [testenv:pep8]
@@ -32,11 +33,7 @@ show-source = true
 exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,tools
 
 [testenv:docs]
-deps = -r{toxinidir}/doc/requirements.txt
-commands = sphinx-build -W -b html doc/source doc/build/html
-
-[testenv:lower-constraints]
 deps =
-  -c{toxinidir}/lower-constraints.txt
-  -r{toxinidir}/requirements.txt
-  -r{toxinidir}/test-requirements.txt
+    -c{env:UPPER_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/master}
+    -r{toxinidir}/doc/requirements.txt
+commands = sphinx-build -W -b html doc/source doc/build/html
