--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -1,6 +1,5 @@
 - project:
     templates:
       - check-requirements
-      - openstack-lower-constraints-jobs
-      - openstack-python3-wallaby-jobs
+      - openstack-python3-jobs
       - publish-openstack-docs-pti
