Show coverage report
... for easy reference. Also fix the missing coverage library.

Change-Id: I895c1372a17f708a1fb11198fe2f3461f4854f53

--- a/tox.ini
+++ b/tox.ini
@@ -20,10 +20,12 @@ setenv =
     {[testenv]setenv}
     PYTHON=coverage run --source heat_cfntools --parallel-mode
 commands =
+    coverage erase
     stestr run {posargs}
     coverage combine
     coverage html -d cover
     coverage xml -o cover/coverage.xml
+    coverage report
 
 [testenv:venv]
 commands = {posargs}
